# cookiecutter-python

./: Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitignore  .python-version  Makefile  mypy.ini  pyproject.toml
